--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magickbase/hw-app-ckb",
-  "version": "0.1.2",
+  "version": "0.2.0-alpha.0",
   "description": "Ledger Hardware Wallet Nervos CKB API",
   "keywords": [
     "Ledger",
@@ -21,7 +21,9 @@
   "publishConfig": {
     "access": "public"
   },
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "main": "lib/Ckb.js",
   "module": "lib-es/Ckb.js",
   "license": "Apache-2.0",
